# ng1ok-linker

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/ng1ok/linker/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MyLoader.cpp  MyLoader.h  log.h  native-lib.cpp  soinfo.h
app/src/main/java/ng1ok/linker/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ng1ok/linker/: ExampleUnitTest.java
demo1/: build.gradle
demo1/src/androidTest/java/ng1ok/demo1/: ExampleInstrumentedTest.java
demo1/src/main/cpp/: CMakeLists.txt  demo1.cpp
demo1/src/main/java/ng1ok/demo1/: NativeLib.java
demo1/src/test/java/ng1ok/demo1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
